<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>ro.pippo</groupId>
        <artifactId>pippo-parent</artifactId>
        <version>1.14.0</version>
    </parent>
    <groupId>com.github.diegopacheco.javapocs</groupId>
    <artifactId>pippo-fun</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>21</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>com.github.diegopacheco.pippo.basic.Main</mainClass>
                    <arguments>
                        <release>21</release>
                        <compilerArgs>--enable-preview</compilerArgs>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>5.10.0</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.kohsuke.metainf-services</groupId>
            <artifactId>metainf-services</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>ro.pippo</groupId>
            <artifactId>pippo-core</artifactId>
            <version>1.14.0</version>
        </dependency>
        <dependency>
            <groupId>ro.pippo</groupId>
            <artifactId>pippo-jetty</artifactId>
            <version>1.14.0</version>
        </dependency>
        <dependency>
            <groupId>ro.pippo</groupId>
            <artifactId>pippo-controller</artifactId>
            <version>1.14.0</version>
        </dependency>
        <dependency>
            <groupId>ro.pippo</groupId>
            <artifactId>pippo-metrics</artifactId>
            <version>1.14.0</version>
        </dependency>
        <dependency>
            <groupId>ro.pippo</groupId>
            <artifactId>pippo-gson</artifactId>
            <version>1.14.0</version>
        </dependency>
        <dependency>
            <groupId>ro.pippo</groupId>
            <artifactId>pippo-xstream</artifactId>
            <version>1.14.0</version>
        </dependency>
        <dependency>
            <groupId>ro.pippo</groupId>
            <artifactId>pippo-jade</artifactId>
            <version>1.14.0</version>
        </dependency>
        <dependency>
            <groupId>ro.pippo</groupId>
            <artifactId>pippo-freemarker</artifactId>
            <version>1.14.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.20.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.9</version>
        </dependency>
    </dependencies>
</project>

